feat: Update project name to GeoMeta Energy Layer Vision
The project's name has been updated to accurately reflect the "GeoMeta Energy Layer" initiative. This change involves updating the application name, package name, and relevant titles across the codebase and metadata files.

Additionally, a new 'proposal_generator' view has been added to the application's navigation and routing. A helper function `extractJson` has been introduced to `Dashboard.tsx` to facilitate parsing JSON data that may be embedded within other text formats.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmel-geothermal-vision",
+  "name": "geometa-energy-layer-vision",
   "private": true,
   "version": "0.0.0",
   "type": "module",
