--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^1.26.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.555.0"
   },
   "devDependencies": {
